[package]
name = "msp430fr2355"
version = "0.3.0"
authors = ["YuhanLiin <linyuhan0315@hotmail.com>"]
description = "Peripheral access crate for MSP430FR2355 microcontroller"
keywords = ["no-std", "msp430", "ti", "launchpad"]
repository = "https://github.com/YuhanLiin/msp430fr2355"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/msp430fr2355"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.0"
msp430 = "0.1.0"
vcell = "0.1.2"

[dependencies.msp430-rt]
optional = true
version = "0.2.0"

[features]
rt = ["msp430-rt"]

[patch.crates-io]
msp430 = { git = "https://github.com/rust-embedded/msp430", branch = "rt-up" }
msp430-rt = { git = "https://github.com/rust-embedded/msp430-rt", branch = "rt-up" }
