[package]
name = "msp430fr2355"
version = "0.5.0"
edition = "2018"
authors = ["YuhanLiin <linyuhan0315@hotmail.com>"]
description = "Peripheral access crate for MSP430FR2355 microcontroller"
keywords = ["no-std", "msp430", "ti", "launchpad"]
repository = "https://github.com/YuhanLiin/msp430fr2355"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/msp430fr2355"

[dependencies]
critical-section = { version = "1.0", optional = true }
msp430 = "0.4.0"
portable-atomic = "0.3.15"
msp430-rt = { version = "0.4.0", optional = true }
vcell = "0.1.0"

[features]
rt = ["msp430-rt/device"]
